--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,9 @@ header h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 main {
-    max-width: fit-content;
+    max-width: 100%;
     text-align: center;
-    background-color: aquamarine;
+    background-color: aliceblue;
 }
 footer {
     background: #F63232;
